--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-django==4.1.5
-psycopg2-binary==2.9.*
-python-dotenv==0.21.0
+python-dotenv==0.21.1
 requests==2.28.2
-
+telegram==0.0.1
+schedule~=1.1.0
